--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Sugar</string>
+    <string name="app_name">Sugar Plus</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="menu_main">الرئيسية</string>
@@ -9,4 +9,5 @@
     <string name="notification">التنبيهات</string>
     <string name="personal_info">الملف الشخصي</string>
     <string name="reports">التقارير</string>
+    <string name="user_name_id">Ziad00100</string>
 </resources>
